--- a/package.json
+++ b/package.json
@@ -2,44 +2,47 @@
   "name": "github-ssh-profile-manager",
   "productName": "GitHub SSH Profile Manager",
   "version": "0.0.2",
+  "description": "A simple tool to manage your GitHub SSH profiles.",
+  "license": "ISC",
+  "author": "Zemichael Mehretu <zemichael.dev>",
   "main": "./dist/main/main.js",
   "files": [
     "dist/**/*",
     "package.json"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=development electron .",
-    "build": "tsc && npm run copy:index && npm run copy:tray && npm run build:css",
-    "dev": "concurrently \"npm run copy:index\" \"npm run copy:tray\" \"npm run watch\" \"npm run watch:css\" \"npm run watch:html\" \"npm run start\"",
-    "watch": "tsc -w",
-    "watch:css": "tailwindcss -i ./src/renderer/styles.css -o ./dist/renderer/styles.css --watch",
-    "watch:html": "nodemon --watch src/renderer/index.html --exec 'npm run copy:index'",
-    "build:css": "tailwindcss -i ./src/renderer/styles.css -o ./dist/renderer/styles.css",
-    "copy:index": "cp ./src/renderer/index.html ./dist/renderer/index.html",
-    "copy:tray": "concurrently \"cp ./src/renderer/tray_icon_dark.png ./build-assets/tray_icon_dark.png\" \"cp ./src/renderer/tray_icon_light.png ./build-assets/tray_icon_light.png\"",
-    "dist": "electron-builder"
+    "dev": "vite",
+    "build": "tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "package": "npm run build && electron-builder",
+    "package:mac": "npm run package -- --mac",
+    "package:win": "npm run package -- --win",
+    "package:linux": "npm run package -- --linux",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "typecheck": "tsc --noEmit",
+    "clean": "rm -rf dist release build-assets",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Zemichael Mehretu <zemichael.dev>",
-  "license": "ISC",
-  "description": "A simple tool to manage your GitHub SSH profiles.",
   "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "lucide-static": "^0.471.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17"
+    "lucide-react": "^0.471.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.10",
-    "@types/node": "^22.10.6",
-    "concurrently": "^9.1.2",
-    "cross-env": "^7.0.3",
-    "electron": "^34.0.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/node": "^18.19.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "electron": "^31.0.1",
     "electron-builder": "^24.13.3",
-    "electron-reloader": "^1.2.3",
-    "nodemon": "^3.1.9",
-    "wait-on": "^8.0.3"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5",
+    "vite": "^5.3.1",
+    "vite-plugin-electron": "^0.28.2",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "build": {
     "appId": "com.halepo.github-ssh-profile-manager",
@@ -49,17 +52,36 @@
       "package.json"
     ],
     "directories": {
+      "buildResources": "build-assets",
       "output": "release"
     },
     "mac": {
       "category": "public.app-category.developer-tools",
-      "icon": "./build-assets/app_icon.png"
+      "icon": "build-assets/app_icon.icns",
+      "target": [
+        "dmg",
+        "zip"
+      ]
     },
     "win": {
-      "target": "nsis"
+      "target": [
+        "nsis",
+        "zip"
+      ],
+      "icon": "build-assets/app_icon.ico"
     },
     "linux": {
-      "target": "AppImage"
+      "target": [
+        "AppImage",
+        "deb",
+        "tar.gz"
+      ],
+      "icon": "build-assets/icons",
+      "category": "Development"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
     }
   }
 }
