--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,18 @@
     "compilerOptions": {
       "target": "ES2020",
       "module": "commonjs",
+      "lib": ["ES2020", "DOM"],
+      "jsx": "react-jsx",
       "strict": true,
       "outDir": "./dist",
       "rootDir": "./src",
       "esModuleInterop": true,
       "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
+      "forceConsistentCasingInFileNames": true,
+      "moduleResolution": "node",
+      "resolveJsonModule": true
     },
-    "include": ["src/**/*.ts", "types.d.ts"],
+    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts", "types.d.ts"],
     "exclude": ["node_modules"]
   }
   
